After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 785331 - Possible Memory leak in gstssaparse.c
Possible Memory leak in gstssaparse.c
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
1.12.2
Other All
: Normal normal
: 1.12.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-07-24 08:02 UTC by Satya Prakash Gupta
Modified: 2017-07-25 08:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch file is attached. (805 bytes, patch)
2017-07-24 08:02 UTC, Satya Prakash Gupta
committed Details | Review

Description Satya Prakash Gupta 2017-07-24 08:02:13 UTC
Created attachment 356279 [details] [review]
Patch file is attached.

File : gst-plugins-base/gst/subparse/gstssaparse.c 

Function : gst_ssa_parse_setcaps at Line : 172

gst_buffer_ref (priv);

buffer unref is missing in fail case .

++patch is attched for possible solution.

Kindly review the patch and provide your feedback.
Comment 1 Sebastian Dröge (slomo) 2017-07-24 08:57:16 UTC
commit 075dac486fbe7222b21c1336fd6dcb02f792cef3 (HEAD -> master)
Author: Satya Prakash Gupta <sp.gupta@samsung.com>
Date:   Mon Jul 24 13:23:17 2017 +0530

    ssaparse: Fix buffer leak in error case
    
    https://bugzilla.gnome.org/show_bug.cgi?id=785331